Add Babel, UglifyJsPlugin

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Test</title>
+	<title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<div id="root">Placeholder #root</div>
 </body>
 </html>
